@@ -1,3 +1,8 @@
+2009-09-09  Dominique Dumont  <dominique.dumont@hp.com> v0.640
+
+	* lib/Config/Model/WizardHelper.pm (new): Correctly scan list
+	element.
+
 2009-07-30  Dominique Dumont  <dominique.dumont@hp.com> v0.639
 
 	* lib/Config/Model/WizardHelper.pm (leaf_element_cb): bug fix:
